--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,10 +13,10 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Generate test directory and file [optional]
-        run: sh generate-test-file.sh
+        run: sh entrypoint.sh
 
       - name: Create pull request
-        uses: paygoc6/pull-request-another-repo-action@main
+        uses: kgolovin/update_theme_actionn@main
         env:
           API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
         with:
@@ -25,4 +25,4 @@ jobs:
           destination_folder: 'theme'
           destination_branch: 'dev-test'
           user_email: 'koc.kit@gmail.com '
-          user_name: 'golovin'
+          user_name: 'kgolovin'
