--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Pushes to another repo
       uses: ./.github/actions/sync-repo
       env:
-        API_TOKEN_GITHUB: ${{ secrets.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 }}
+        API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
       with:
         source_folder: 'theme'
         destination_repo: 'kgolovin/update_theme_action'
