--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -1,26 +1,25 @@
-name: Sync Repositories
+name: Push File
 
-on: 
+on:
   push:
-    branches:
-      - main
+      branches: [ main ]
 
 jobs:
-  build:
-    if: github.repository == 'kgolovin/update_theme'
+  pull-request:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v2
-    - name: Pushes to another repo
-      uses: ./.github/actions/sync-repo
-      env:
-        API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
-      with:
-        source_folder: 'theme'
-        destination_repo: 'kgolovin/update_theme_action'
-        destination_folder: 'theme'
-        user_email: 'konstantin.golovin@catenamedia.com'
-        user_name: 'kgolovin'
-        commit_msg: 'Check sync to another repo'
-        destination_branch: main
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Create pull request
+        uses: ./.github/actions/sync-repo
+        env:
+          API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
+        with:
+          source_folder: 'wp-content/themes/gg/'
+          destination_repo: 'kgolovin/update_theme_action'
+          destination_folder: 'wp-content/themes/gg'
+          destination_base_branch: 'main'
+          destination_head_branch: 'temp_dev_branch'
+          user_email: 'koc.kit@gmail.com'
+          user_name: 'kgolovin'
+          pull_request_reviewers: 'reviewers'
